Menu mobile and back to top. Media query corrections and alignments

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,5 @@
 .intro-content {
     position: relative;
-      /* top: -8rem; */
     display: grid;
     grid-template-columns: 1fr 1.5fr;
     gap: var(--gap);
@@ -21,13 +20,12 @@
 
 .top3-content {
     max-width: 64rem;
-    min-height: 100vh;
     display: flex;
-    /*flex-flow: column wrap;*/
     flex-direction: column;
     flex-wrap: nowrap;
     align-items: center;
     justify-content: center;
+    min-height: 100vh;
     text-align: center;
 }
 
@@ -173,10 +171,44 @@
     margin: 0;
     padding: 2rem;
 }
+
+.close-menu {
+    display: none;
+}
+  
+.back-to-top {
+    position: fixed;
+    bottom: 2rem;
+    right: 2rem;
+    background: var(--white-color);
+    width: 5rem;
+    height: 5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    color: var(--primary-color);
+    transform: rotate(-90deg);
+    border: 0.1rem solid var(--primary-color);
+}
   
 @media (max-width: 80rem) {
     intro-content, .grid {
     grid-template-columns: 1fr;
+    }
+
+    .intro-content{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .intro-text-content, .intro-img {
+        width: 80%;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
     }
     
     .gallery-img {
@@ -189,7 +221,59 @@
         width: 100%;
     }
     
-    .grid-one-content {
+    .design-content { 
+        width: 95%;
         display: block;
+    }
+    
+    .design-content::before { 
+        margin-top: 10%;
+    }
+    
+    .menu {
+        bottom: 0;
+        text-align: center;
+    }
+    
+    .menu-content, .menu-content ul {
+        flex-direction: column;
+        justify-content: center;
+    }
+    
+    .menu-content {
+        height: 100vh;
+    }
+    
+    .menu {
+        display: none;
+    }
+    
+    .close-menu-label::after {
+        content: '☰';
+        position: fixed;
+        z-index: 2;
+        top: 2rem;
+        right: 2rem;
+        background: var(--primary-color);
+        color: var(--white-color);
+        font-size: 3rem;
+        line-height: 3rem;
+        width: 3rem;
+        height: 3rem;
+        text-align: center;
+        padding: 0.5rem;
+        cursor: pointer;
+    }
+    
+    .close-menu:checked~.menu {
+        display: block;
+    }
+    
+    .close-menu:checked~.close-menu-label::after {
+        content: '×';
+    }
+    
+    .menu-spacing {
+        display: none;
     }
 }
